--- a/OGL_Application.vcxproj
+++ b/OGL_Application.vcxproj
@@ -226,12 +226,13 @@
     <ClCompile Include="OGL_Application\src\Objects\object1\object1.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\particle\my_particle.cpp" />
     <ClCompile Include="OGL_Application\src\UI\buttonfunctionLoader.cpp" />
-    <ClCompile Include="OGL_Application\src\UI\buttonStart.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\buttonEditObject.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\buttonEditObject_editCluster.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\ButtonEditObject_editSize.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\buttonEditObject_moveObject.cpp" />
     <ClCompile Include="OGL_Application\src\UI\printHelperCollector.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart2.cpp" />
     <ClCompile Include="OGL_Application\src\UI\userInterface.cpp" />
     <ClCompile Include="OGL_Application\src\UI\buttonMap.cpp" />
     <ClCompile Include="OGL_Application\src\UI\buttons.cpp" />
