--- a/OGL_Application.vcxproj
+++ b/OGL_Application.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="OGL_Application\include\application.h" />
     <ClInclude Include="OGL_Application\include\baseObject.h" />
     <ClInclude Include="OGL_Application\include\cameraTransformations\cameraManager.h" />
+    <ClInclude Include="OGL_Application\include\Objects\characters\activeCharacterManager.h" />
     <ClInclude Include="OGL_Application\include\Objects\ground.h" />
     <ClInclude Include="OGL_Application\include\LibAndFacility\conversionLIB.h" />
     <ClInclude Include="OGL_Application\include\LibAndFacility\toStringLib.h" />
@@ -220,6 +221,7 @@
     <ClCompile Include="OGL_Application\src\baseObject.cpp" />
     <ClCompile Include="OGL_Application\src\ApplicationObject\applicationDerivedObjectAdvanced.cpp" />
     <ClCompile Include="OGL_Application\src\cameraTransformations\cameraManager.cpp" />
+    <ClCompile Include="OGL_Application\src\Objects\characters\activeCharacterManager.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\groundSurface\ground.cpp" />
     <ClCompile Include="OGL_Application\src\Objects\groundSurface\groundSurface.cpp" />
     <ClCompile Include="OGL_Application\src\LibAndFacility\conversionLIB.cpp" />
@@ -238,6 +240,7 @@
     <ClCompile Include="OGL_Application\src\UI\EditObject\buttonEditObject_moveObject.cpp" />
     <ClCompile Include="OGL_Application\src\UI\printHelperCollector.cpp" />
     <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart2.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart_activeCharacterCluster.cpp" />
     <ClCompile Include="OGL_Application\src\UI\userInterface.cpp" />
     <ClCompile Include="OGL_Application\src\UI\buttonMap.cpp" />
     <ClCompile Include="OGL_Application\src\UI\buttons.cpp" />
