--- a/OGL_Application.vcxproj.filters
+++ b/OGL_Application.vcxproj.filters
@@ -587,12 +587,6 @@
     <ClCompile Include="OGL_Application\src\UI\textRenderer.cpp">
       <Filter>Source Files\DRAWING_SRC</Filter>
     </ClCompile>
-    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart2.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="OGL_Application\src\Objects\polygon\polygon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -633,6 +627,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="OGL_Application\src\ApplicationObject\applicationObjectManager_saveLoad.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart_mainCallbackFunc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OGL_Application\src\saveloadhelper\activeObjectSaver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
