--- a/OGL_Application.vcxproj
+++ b/OGL_Application.vcxproj
@@ -243,7 +243,7 @@
     <ClCompile Include="OGL_Application\src\saveloadhelper\collectorSaver.cpp" />
     <ClCompile Include="OGL_Application\src\saveloadhelper\saver.cpp" />
     <ClCompile Include="OGL_Application\src\UI\buttonfunctionLoader.cpp" />
-    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart.cpp" />
+    <ClCompile Include="OGL_Application\src\UI\startButton\buttonStart_printMenu.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\buttonEditObject.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\buttonEditObject_editCluster.cpp" />
     <ClCompile Include="OGL_Application\src\UI\EditObject\ButtonEditObject_editSize.cpp" />
